添加user rpc服务
