# service/system/api/docs/swagger/system.json
@@ -105,6 +105,7 @@
             "schema": {
               "type": "object",
               "properties": {
+                "data": {},
                 "message": {
                   "type": "string"
                 }
@@ -252,6 +253,29 @@
                       }
                     }
                   }
+                },
+                "userDetails": {
+                  "type": "object",
+                  "required": [
+                    "userId",
+                    "username",
+                    "email",
+                    "gender"
+                  ],
+                  "properties": {
+                    "email": {
+                      "type": "string"
+                    },
+                    "gender": {
+                      "type": "integer"
+                    },
+                    "userId": {
+                      "type": "string"
+                    },
+                    "username": {
+                      "type": "string"
+                    }
+                  }
                 }
               }
             }
@@ -314,7 +338,7 @@
       }
     }
   },
-  "x-date": "2026-04-30 22:54:35",
+  "x-date": "2026-04-30 23:55:59",
   "x-description": "This is a goctl generated swagger file.",
   "x-github": "https://github.com/zeromicro/go-zero",
   "x-go-zero-doc": "https://go-zero.dev/",
